# Closest-Pair-Problem

./: LICENSE  README.md
BST_Algorithm/: Readme.txt
BST_Algorithm/BST_Demo/BSTDemo10000/: generateInputFilesTest1.bat  points10000.txt  points20000.txt  points70000.txt  results.txt
BST_Algorithm/BST_Demo/BSTDemo100000/: points100000.txt  points200000.txt  results.txt
BST_Algorithm/BST_Project/: _DS_Store
BST_Algorithm/BST_Project/ClosestPointsAlgo/: ClosestPointsAlgo.sln  _DS_Store
BST_Algorithm/BST_Project/ClosestPointsAlgo/ClosestPointsAlgo/: ClosestPointsAlgo.cpp  ClosestPointsAlgo.vcxproj  ClosestPointsAlgo.vcxproj.filters  Configuration.h  Grid.h
BST_Algorithm/BST_Project/ClosestPointsAlgo/GenerateInputFile/: Configuration.cpp  GenerateInputFile.cpp  GenerateInputFile.vcxproj  GenerateInputFile.vcxproj.filters  stdafx.cpp
Bruteforce_Algorithm/: CMakeLists.txt  Readme.txt  _DS_Store  main.cpp
Bruteforce_Algorithm/Resources/: input.txt
Hasing_Algorithm/: Readme.txt
Hasing_Algorithm/Hash Project/ClosestPointsAlgo/: _DS_Store
Hasing_Algorithm/Hash Project/ClosestPointsAlgo/ClosestPointsAlgo/: CMakeLists.txt  ClosestPointsAlgo.cpp  ClosestPointsAlgo.vcxproj  ClosestPointsAlgo.vcxproj.filters  Configuration.cpp  Grid.h  Point.h  _DS_Store  stdafx.cpp  stdafx.h
Hasing_Algorithm/Hash_Demo/HashDemo10000/: points30000.txt  points40000.txt  points50000.txt  points60000.txt  points80000.txt  results.txt  testPoints.bat
Hasing_Algorithm/Hash_Demo/HashDemo100000/: generateInputFilesTest1.bat  points100000.txt  points200000.txt  results.txt  testPoints.bat
(+4 files in other folders)
